reuse translations: backup (wip)

--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/20.avoid_hardware_failure.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/20.avoid_hardware_failure.md
@@ -1,55 +1,55 @@
 ---
-title: Avoid hardware failure
+title: Éviter les pannes matérielles
 ---
 
-## Physically secure your server
+## Sécuriser physiquement votre serveur
 
-Very often people who self-host don't have proper storage for their system. Leaving the server in several parts, in a high traffic area, accessible to children or pets, or in a poorly ventilated area can quickly turn into a disaster.
+Très souvent les personnes qui s'autohébergent n'ont pas de rangement correct pour leur système. Laisser le serveur en plusieurs parties, dans un lieu de passage, accessible à des enfants ou des animaux, ou dans un endroit peu aéré peut vite tourner à la catastrophe.
 
-## Secure your hard drives
+## Fixer vos disques durs
 
-Ideally, your hard disks should be fixed to prevent vibrations which can accelerate the wear of the equipment or even reduce its performance, especially if there is another disk next to it.
+Idéalement, vos disques durs doivent être fixés pour éviter les vibrations qui peuvent accélérer l'usure du matériel voire atténuer ses performances, notamment s'il y a un autre disque à côté.
 
-## Reduce swapiness for SD cards and SSDs
+## Réduire la swapiness pour les cartes SD et disques SSD
 
-If you use a swap file with an SSD or SD card with too much swapiness, your storage media could give up the ghost prematurely due to too many writes.
+Si vous utilisez un fichier de swap avec un SSD ou une carte SD avec une swapiness trop élevée, votre support de stockage pourrait rendre l'âme prématurément en raison d'un trop grand nombre d'écritures.
 
-To prevent this:
+Pour éviter ça:
 
 ```bash
 cat /proc/sys/vm/swappiness
 ```
 
-If it is above 10:
+Si elle est au-dessus de 10:
 
 ```bash
 sysctl vm.swappiness=10
 nano /etc/sysctl.conf
 ```
 
-If present, change the vm.swappiness value to 10. Otherwise add the line:
+Si la ligne est présente, changez la valeur vm.swappiness à 10.Sinon, ajoutez la ligne:
 
 ```text
 vm.swappiness = 10
 ```
 
-## Storage redundancy
+## Redondance de stockage
 
-In order to limit hardware failures of storage media, it can be relevant to set up a cluster of mirrored disks (RAID, ZFS). The idea here is that everything that is written to one disk will be written to the other. This way, if one fails, the other continues to work and the server is still fully functional.
+Afin de limiter les pannes matérielles des supports de stockage, il peut être pertinent de mettre en place une grappe de disques en miroir (RAID, ZFS). L'idée ici est que tout ce qui est écrit sur un disque le sera sur l'autre. Ainsi, si l'un tombe en panne, l'autre continue de fonctionner et le serveur est toujours pleinement fonctionnel.
 
-There are also more advanced clusters that maximize fault tolerance (failure of 2 disks like RAID6) or storage (see RAID 5).
+Il existe aussi des grappes plus évoluées qui maximisent la tolérance de panne (panne de 2 disques comme le RAID6) ou le stockage (voir RAID 5).
 
-However, these disk clustering techniques should not be considered as backups. A RAID array should be considered as a single storage medium. Indeed, if this technique prevents having to reinstall in case of a probable disk crash, it is far from zero risk.
+Toutefois, ces techniques de grappes de disques ne devraient pas être considérées comme des copies de sauvegarde. Une grappe RAID devrait être considérée comme un seul support de stockage. En effet, si cette technique permet d'éviter de devoir réinstaller en cas de crash probable d'un disque, on est loin du risque zéro.
 
-Some examples of situations known to professional system administrators:
+Quelques exemples de situations connues des administrateurs systèmes professionnels:
 
-- the disks of a cluster mounted with disks of the same brand can fail almost at the same time within a few hours
-- without monitoring the health of the disks, there is a good chance that the failure of one disk in the cluster will only be noticed when a second one fails (\>\<)
-- if you don't have a spare disk, the delay in purchasing one may result in the other disk crashing
-- a half-functional disk that produces errors can propagate its error through the cluster
-- the disk connectors or the RAID controller can also produce errors or fail
-- the more complex you make the architecture with many components, the more likely it is that one of them will fail
+- les disques d'une grappe montée avec des disques de la même marque peuvent tomber en panne quasiment en même temps en moins de quelques heures
+- sans monitoring de la santé des disques, il y a de fortes chances que l'on ne remarque la panne d'un disque de la grappe que lorsqu'un deuxième tombe en panne (><)
+- si on n'a pas de disque de rechange, le délai d'achat peut aboutir à un crash de l'autre disque
+- un disque à moitié fonctionnel qui produit des erreurs peut propager son erreur à travers la grappe
+- les connectiques des disques ou le contrôleur RAID peuvent produire des erreurs aussi ou tomber en panne
+- plus on complexifie l'architecture avec de nombreux composants, plus il y a de chances que l'un d'eux tombe en panne
 
 :::info
-If you want to set up a RAID array or use btrfs, the easiest way is to do it at installation with the YunoHost iso in expert mode (when partitioning the system).
+Si vous souhaitez mettre en place une grappe RAID ou utiliser btrfs, le plus simple est de le faire à l'installation avec l'iso YunoHost en mode expert (lors du partitionnement du système).
 :::
