--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/35.migrate_or_merge_servers.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/35.migrate_or_merge_servers.md
@@ -1,16 +1,15 @@
 ---
-title: Migrate or merge servers
+title: Migrer ou fusionner des serveurs
 ---
 
+## Migrer un serveur
 
-## Migrate a server
+Si le système d'archive de YunoHost est assez pratique pour migrer un serveur, on peut aussi [migrer de serveur à serveur avec rsync](https://www.man42.net/blog/2017/07/how-to-migrate-a-debian-server/).
 
-If YunoHost's archive system is not convenient enough to migrate a server, you can also [migrate from server to server with rsync](https://www.man42.net/blog/2017/07/how-to-migrate-a-debian-server/).
+## Fusionner 2 serveurs YunoHost
 
-## Merge 2 YunoHost servers
-
-If you merge 2 servers together, you will need to recreate the users, domains and permissions of the first server on the destination server. Then you can restore app by app.
+Si vous fusionnez 2 serveurs ensemble, vous devrez recréer les utilisateurs et utilisatrices, ainsi que les domaines et les permissions du premier serveur sur le serveur de destination. Puis vous pourrez restaurer app par app.
 
 :::danger
-There is a limitation concerning apps that have the same ID. It will not be possible to restore them easily. Also be careful not to delete the eponymous app from the destination server :/
+Il existe tout de même une limite concernant les apps qui ont le même ID. Il ne sera pas possible de les restaurer facilement. Attention également à ne pas supprimer l'app éponyme du serveur de destination :/
 :::
