--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Backing up your server
+title: Sauvegardes
 ---
 
 import Tabs from '@theme/Tabs';
@@ -8,179 +8,177 @@ import TabItem from '@theme/TabItem';
 import Highlight from '@site/src/components/Highlight';
 import {HighlightWebAdmin, HighlightDiagnosis, HighlightApplications, HighlightAppInstall} from '@site/src/components/Highlight';
 
-In the context of self-hosting, backups are an important element to compensate for unexpected events (fire, database corruption, loss of access to the server, compromised server...). The backup policy to implement depends on the importance of the services and data you manage. For example, backing up a test server will be of little interest, while you will want to be very careful if you are managing critical data for an association or a company - and in such cases, you will want to store the backups *in a different location or locations*.
+Dans le contexte de l'auto-hébergement, les sauvegardes (backups) sont un élément important pour pallier les événements inattendus (incendies, corruption de base de données, perte d'accès au serveur, serveur compromis...). La politique de sauvegardes à mettre en place dépend de l'importance des services et des données que vous gérez. Par exemple, sauvegarder un serveur de test aura peu d'intérêt, tandis que vous voudrez être très prudent si vous gérez des données critiques pour une association ou une entreprise - et dans ce genre de cas, vous souhaiterez stocker les sauvegardes *dans un endroit différent*.
 
-## Manual backup
+## Sauvegarde manuelle
 
-YunoHost comes with a backup system, that allows you to backup (and restore) system configurations and data (e.g. emails) and apps if they support it.
+YunoHost contient un système de sauvegarde, qui permet de sauvegarder (et restaurer) les configurations du système, les données « système » (comme les mails) et les applications si elles le supportent.
 
-You can manage backups either from the command line (`yunohost backup --help`) or from the web administration (in the Backups section), though some features are not yet available in the webadmin.
+Vous pouvez gérer vos sauvegardes via la ligne de commande (`yunohost backup --help`) ou la webadmin (dans la section Sauvegardes) bien que certaines fonctionnalités ne soient pas disponibles via celle-ci.
 
-The current default method consists in creating a `.tar` archive containing all relevant files.
+La méthode de sauvegarde actuelle consiste à créer des archives `.tar` qui contiennent les fichiers pertinents.
 
-### Creating backups
+#### Créer une sauvegarde
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="From the web interface">
-You can easily create backup archives from the webadmin by going to `Backups > Local storage` and clicking on `New backup`. You will then be asked to select which configuration, data and apps you want to backup.
 
-![picture of YunoHost's backup pannel](/img/backup.png)
+Vous pouvez facilement créer des archives depuis la webadmin en allant dans `Sauvegardes > Archives locales` et en cliquant sur `Nouvelle sauvegarde`. Vous pourrez ensuite sélectionner les éléments à sauvegarder (configuration, données "système", applications).
+
+![Image de l'écran de sauvegarde de YunoHost dans la webadmin](/img/backup.png)
 
   </TabItem>
   <TabItem value="cli" label="From the command line">
 
-You can create a new backup archive from the command line. Here are a few simple examples of commands and their corresponding behavior:
+Vous pouvez créer de nouvelles archives depuis la ligne de commande. Voici quelques exemples de commandes et leur comportement correspondant :
 
-- Backing up everything (all system parts and apps):
+- Tout sauvegarder (système et apps) :
 
-  ```bash
-  yunohost backup create
-  ```
+```bash
+yunohost backup create
+```
 
-- Backing up only apps
+- Sauvegarder seulement les apps :
 
-  ```bash
-  yunohost backup create --apps
-  ```
+```bash
+yunohost backup create --apps
+```
 
-- Backing up only two apps (wordpress and shaarli)
+- Sauvegarder seulement deux apps (WordPress et Shaarli) :
 
-  ```bash
-  yunohost backup create --apps wordpress shaarli
-  ```
+```bash
+yunohost backup create --apps wordpress shaarli
+```
 
-- Backing up only emails
+- Sauvegarder seulement les mails :
 
-  ```bash
-  yunohost backup create --system data_mail
-  ```
+```bash
+yunohost backup create --system data_mail
+```
 
-- Backing up emails and wordpress
+- Sauvegarder les mails et WordPress :
 
-  ```bash
-  yunohost backup create --system data_mail --apps wordpress
-  ```
+```bash
+yunohost backup create --system data_mail --apps wordpress
+```
 
-For more information and options about backup creation, consult `yunohost backup create --help`. You can also list the system parts that can be backed up with `yunohost hook list backup`.
+Pour plus d'informations et d'options sur la création d'archives, consultez `yunohost backup create --help`. Vous pouvez également lister les parties du système qui sont sauvegardables avec `yunohost hook list backup`.
 
   </TabItem>
 </Tabs>
 
-### Downloading backups
+#### Télécharger la sauvegarde
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="From the web interface">
+Après avoir créé des sauvegardes, il est possible de les lister et de les inspecter grâce aux vues correspondantes dans l'interface d'administration web. Un bouton propose de télécharger l'archive. Si l'archive fait plus de 3Go, il peut être préférable de procéder via SFTP.
 
-After creating backups, it is possible to list and inspect them using the corresponding views in the web administration interface. A button allows you to download the archive. If the archive is larger than 3GB, it may be better to proceed via SFTP.
-
-`Backup > Local Archives > <Archive name> > Download`
+`Sauvegarde > Archives locales > <Nom de l'archive> > Télécharger`
 
   </TabItem>
   <TabItem value="sftp" label="With a SFTP client">
 
-Currently, the most accessible way to download big archives is to use the program FileZilla as explained in [this page](/administer/tutorials/filezilla).
+À l'heure actuelle, la solution la plus accessible pour récupérer les sauvegardes de grosse taille est d'utiliser le programme FileZilla comme expliqué dans [cette page](/administer/tutorials/filezilla).
 
-By default, backups are stored in `/home/yunohost.backup/archives/`.
+Par défaut, les sauvegardes sont stockées dans `/home/yunohost.backup/archives/`.
 
   </TabItem>
-  <TabItem value="cli" label="From the command line">
+  <TabItem value="sftp" label="With a SFTP client">
 
-The `yunohost backup list` and `yunohost backup info <archive_name>` commands provide information about the names and sizes of backups.
+Les commandes `yunohost backup list` et `yunohost backup info <nom_d'archive>` permettent d'obtenir des infiormations sur les noms et tailles des sauvegardes.
 
-It is possible to use `scp` (a program based on [`ssh`](/administer/admin_guide/command_line)) to copy files between two machines via the command line. So, from a GNU/Linux machine, you can use the following command to download an archive:
+Il est possible d'utiliser `scp` (un programme basé sur [`ssh`](/administer/admin_guide/command_line)) pour copier des fichiers entre deux machines grâce à la ligne de commande. Ainsi, depuis une machine sous GNU/Linux, vous pouvez utiliser la commande suivante pour télécharger une archive :
 
 ```bash
-scp admin@your.domain.tld:/home/yunohost.backup/archives/<archive_name>.tar ./
+scp admin@votre.domaine.tld:/home/yunohost.backup/archives/<nom_darchive>.tar ./
 ```
 
-If your SSH port is different from 22
+En cas de port SSH autre que 22 :
 
 ```bash
-scp -P ssh_port admin@your.domain.tld:/home/yunohost.backup/archives/<archive_name>.tar ./
+scp -P port_ssh admin@votre.domaine.tld:/home/yunohost.backup/archives/<nom_darchive>.tar ./
 ```
 
   </TabItem>
 </Tabs>
 
-
 :::caution
-Don't forget to store your backup in a different place to your server.
+N'oubliez pas de stocker votre sauvegarde dans un lieu différents de celui ou se trouve votre serveur.
 :::
 
 :::info
-If you want, you can connect an external disk to your server so that the archives arrive directly on it. See this guide to [Adding external storage to your server](/administer/tutorials/external_storage)
+Si vous le souhaitez, vous pouvez connecter un disque externe à votre serveur pour que les archives arrivent directement dessus. Voir ce guide pour [Ajouter un stockage externe à son serveur](/administer/tutorials/external_storage)
 :::
 
-### Testing
+### Tester
 
-You should regularly test your backups by at least listing the contents of the archives and checking the size of the associated data. It is best to practice restoring regularly.
+Vous devriez tester régulièrement vos sauvegardes à minima en listant le contenu des archives et en vérifiant le poids des données associées. Le mieux est de s'entrainer règulièrement à restaurer.
 
 ```bash
-# List the files
+# Lister les fichiers
 tar -tvf /home/yunohost.backup/archives/ARCHIVE.tar | less
 
-# List database exports
-tar -tvf /home/yunohost.backup/archives/ARCHIVE.tar | grep "(db|dump)`.sql"
+# Lister les exports de base de données
+tar -tvf /home/yunohost.backup/archives/ARCHIVE.tar | grep "(db|dump)\.sql"
 
-# Check the weight
+# Vérifier le poids
 ls -lh /home/yunohost.backup/archives/ARCHIVE.tar
 ```
 
-### Restoring backups
+### Restaurer
 
 :::info
-SPOILER: The larger your data volume and the more applications you have, the more complex your recovery will be.
+SPOILER: Plus votre volume de données et le nombre d'applications sont important, plus votre restauration sera complexe.
 :::
 
-#### Simple case: little data, archive already present
+#### Cas simple : peu de données, archive déjà présente
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="From the web interface">
 
-Go in `Backup > Local storage` and select your archive. You can then select which items you want to restore, then click on 'Restore'.
+Allez dans `Sauvegardes > Archives locales` et sélectionnez l'archive. Vous pouvez ensuite choisir les différents éléments que vous voulez restaurer puis cliquer sur "Restaurer".
 
 ![picture of YunoHost's restore pannel](/img/restore.png)
 
   </TabItem>
   <TabItem value="cli" label="From the command line">
 
-From the command line, you can run `yunohost backup list` to get the available archive names. They are basically their file name without extension.
+À partir de la ligne de commande, vous pouvez exécuter `yunohost backup list` pour obtenir les noms des archives disponibles. Il s'agit essentiellement de leur nom de fichier sans extension.
 
-You can then run `yunohost backup restore <archivename>` (hence without its `.tar` extension) to restore an archive. As for `yunohost backup create`, this will restore everything in the archive by default. If you want to restore only specific items, you can use something like `yunohost backup restore <archivename> --apps wordpress`, which will restore only the wordpress app.
+Vous pouvez ensuite exécuter `yunohost backup restore <archivename>` (donc sans son extension .tar) pour restaurer une archive. Comme pour `yunohost backup create`, cela restaurera tout ce qui se trouve dans l'archive par défaut. Si vous voulez restaurer uniquement des éléments spécifiques, vous pouvez utiliser par exemple `yunohost backup restore <archivename> --apps wordpress` qui restaurera uniquement l'application wordpress.
 
 :::tip
-In the case of a complete restoration, it is possible to restore instead of launching the initial configuration.
+Dans le cas d'une restauration complète, il est possible de restaurer à la place de lancer la configuration initiale.
 :::
 
   </TabItem>
 </Tabs>
 
-To restore an app, the domain on which it was installed should already be configured (or you need to restore the corresponding system configuration). You also cannot restore an app which is already installed... which means that to restore an old version of an app, you must first uninstall it.
+Pour restaurer une application, le domaine sur laquelle elle est installée doit déjà être configuré (ou il vous faut restaurer en même temps la configuration correspondante). Aussi, il n'est pas possible de restaurer une application déjà installée... ce qui veut dire que pour restaurer une sauvegarde d'une app, il vous faut déjà la désinstaller.
 
-#### Uploading an archive
+#### Téléverser une archive
 
-In many cases, the archive is not on the server on which you want to restore it. So it has to be uploaded, which depending on its size can take more or less time.
+Dans de nombreux cas, l'archive n'est pas sur le serveur sur lequel on souhaite la restaurer. Il faut donc la téléverser, ce qui selon son poids peut prend plus ou moins de temps.
 
 <Tabs groupId="admin-commands">
   <TabItem value="sftp" label="With a SFTP client">
+À l'heure actuelle, la solution la plus accessible pour téléverser les sauvegardes est d'utiliser le programme FileZilla comme expliqué dans [cette page](/administer/tutorials/filezilla).
 
-Currently, the most accessible solution for uploading backups is to use the FileZilla program as explained in [this page](/administer/tutorials/filezilla).
-
-By default, backups are to be placed in `/home/yunohost.backup/archives/`.
+Par défaut, les sauvegardes sont à placer dans `/home/yunohost.backup/archives/`.
 
   </TabItem>
   <TabItem value="cli" label="From the command line">
 
-You can upload a backup from a machine to your server with :
+Vous pouvez téléverser une sauvegarde depuis une machine vers votre serveur avec :
 
 ```bash
-scp /path/to/your/<archive_name>.tar admin@your.domain.tld:/home/yunohost.backup/archives/
+scp /path/to/your/<nom_d'archive>.tar admin@your.domain.tld:/home/yunohost.backup/archives/
 ```
 
-If your SSH port is different from 22
+En cas de port SSH autre que 22 :
 
 ```bash
-scp -P ssh_port /path/to/your/<archive_name>.tar admin@your.domain.tld:/home/yunohost.backup/archives/
+scp -P port_ssh /path/to/your/<nom_d'archive>.tar admin@your.domain.tld:/home/yunohost.backup/archives/
 ```
 
   </TabItem>
