--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/20.backups/20.avoid_hardware_failure.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/20.backups/20.avoid_hardware_failure.md
@@ -1,55 +1,55 @@
 ---
-title: Avoid hardware failure
+title: Evitare i problemi hardware
 ---
 
-## Physically secure your server
+## Rendere sicuro fisicamente il tuo server
 
-Very often people who self-host don't have proper storage for their system. Leaving the server in several parts, in a high traffic area, accessible to children or pets, or in a poorly ventilated area can quickly turn into a disaster.
+Frequentemente la persone che fanno selfhosting non dispongono di spazi adatti per posizionare il proprio server. Posizionare il server, o parti di esso, in un luogo di passaggio, accessibile a bambini o animali, o in un luogo poco ventilato, può avere conseguenze catastrofiche.
 
-## Secure your hard drives
+## Fissate i vostri HD
 
-Ideally, your hard disks should be fixed to prevent vibrations which can accelerate the wear of the equipment or even reduce its performance, especially if there is another disk next to it.
+Sarebbe opportuno fissare saldamente i propri hard disk al fine di evitare vibrazioni che provocano usura prematura del disco, o ne pregiudicano le performance, in particolar modo se si trovano vicini ad altri dischi.
 
-## Reduce swapiness for SD cards and SSDs
+## Ridurre lo swapiness nelle schede SD e nei dischi SSD
 
-If you use a swap file with an SSD or SD card with too much swapiness, your storage media could give up the ghost prematurely due to too many writes.
+Se utilizzate un file di swap, in un disco SSD o in una scheda SD, con uno swapiness troppo elevato correte il serio rischio di usurare prematuramente il vostro supporto a causa di un numero eccessivo di scritture sul disco.
 
-To prevent this:
+Per evitare il problema
 
 ```bash
 cat /proc/sys/vm/swappiness
 ```
 
-If it is above 10:
+Se il comando restituisce un valore superiore a 10:
 
 ```bash
 sysctl vm.swappiness=10
 nano /etc/sysctl.conf
 ```
 
-If present, change the vm.swappiness value to 10. Otherwise add the line:
+Se la riga è presente, cambiate il valore vm.swappiness con 10. In caso contrario aggiungete la riga:
 
 ```text
-vm.swappiness = 10
+vm.swappiness = 10:
 ```
 
-## Storage redundancy
+## Ridondanza dei supporti
 
-In order to limit hardware failures of storage media, it can be relevant to set up a cluster of mirrored disks (RAID, ZFS). The idea here is that everything that is written to one disk will be written to the other. This way, if one fails, the other continues to work and the server is still fully functional.
+Al fine di limitare i guasti dei supporti si dovrebbe ricorrere ad un cluster di dischi in modalità mirror (RAID, ZFS). Il concetto è che tutto quello che verrà scritto su un disco verrà scritto anche negli altri. In questo modo se un disco subisce un guasto, gli altri garantiranno la funzionalità del server.
 
-There are also more advanced clusters that maximize fault tolerance (failure of 2 disks like RAID6) or storage (see RAID 5).
+Altre configurazioni più evolute, migliorano la tolleranza ai guasti (guasto di 2 dischi nel RAID6) o la suddivisione dei dati (RAID 5).
 
-However, these disk clustering techniques should not be considered as backups. A RAID array should be considered as a single storage medium. Indeed, if this technique prevents having to reinstall in case of a probable disk crash, it is far from zero risk.
+Comunque i sistemi RAID non vanno considerati come metodi di backup. Un RAID deve essere considerato un normale supporto dei dati. Se questo sistema permette di evitare reinstallazioni in caso di guasto ad un disco, esso non ci garantisce che i nostri dati non correranno nessun rischio.
 
-Some examples of situations known to professional system administrators:
+Alcune situazioni ben conosciute dagli amministratori di sistema.
 
-- the disks of a cluster mounted with disks of the same brand can fail almost at the same time within a few hours
-- without monitoring the health of the disks, there is a good chance that the failure of one disk in the cluster will only be noticed when a second one fails (\>\<)
-- if you don't have a spare disk, the delay in purchasing one may result in the other disk crashing
-- a half-functional disk that produces errors can propagate its error through the cluster
-- the disk connectors or the RAID controller can also produce errors or fail
-- the more complex you make the architecture with many components, the more likely it is that one of them will fail
+- i dischi di un cluster creato con dischi della stessa marca possono guastarsi quasi contemporaneamente nel giro di poche ore
+- se non monitoriamo lo stato di salute dei nostri dischi, probabilmente ci accorgeremo di un problema ai dischi della  configurazione RAID solo quando si guasterà un secondo disco (><)
+- se non abbiamo un HD di scorta, nell'attesa che arrivi il disco nuovo per sostituire quello danneggiato, si guasterà anche l'altro
+- un disco che non funziona correttamente può provocare errori in tutta la catena
+- anche i controller RAID o i connettori possono guastarsi o dare errori
+- più complessa è la nostra catena, maggiori sono le possibilità di un guasto
 
 :::info
-If you want to set up a RAID array or use btrfs, the easiest way is to do it at installation with the YunoHost iso in expert mode (when partitioning the system).
+Se pianificate di creare una catena RAID o utilizzare il filesystem btrfs, la procedura più semplice è quella di installare YunoHost in modalità esperto (nella parte relativa alle partizioni del disco).
 :::
