--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/20.backups/35.migrate_or_merge_servers.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/20.backups/35.migrate_or_merge_servers.md
@@ -1,16 +1,15 @@
 ---
-title: Migrate or merge servers
+title: Migrare o unire server
 ---
 
+## Migrare un server
 
-## Migrate a server
+Il sistema di archiviazione di YunoHost permette di migrare facilmente un server ma potete anche seguire [questo link per migrare un server ad un altro con rsync](https://www.man42.net/blog/2017/07/how-to-migrate-a-debian-server/).
 
-If YunoHost's archive system is not convenient enough to migrate a server, you can also [migrate from server to server with rsync](https://www.man42.net/blog/2017/07/how-to-migrate-a-debian-server/).
+## Aggregare 2 server YunoHost
 
-## Merge 2 YunoHost servers
-
-If you merge 2 servers together, you will need to recreate the users, domains and permissions of the first server on the destination server. Then you can restore app by app.
+Se volete aggregare 2 server dovrete ricreare i domini, gli account utenti e i relativi permessi dal primo al server di destinazione. In seguito potrete ripristinare i programmi uno alla volta.
 
 :::danger
-There is a limitation concerning apps that have the same ID. It will not be possible to restore them easily. Also be careful not to delete the eponymous app from the destination server :/
+Esiste però un limite che riguarda i programmi che hanno lo stesso ID che saranno difficilmente ripristinabili. Abbiate cura di non cancellare il programma eponymous del server di destinazione :/
 :::
