--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/index.mdx
@@ -83,7 +83,7 @@ Après avoir créé des sauvegardes, il est possible de les lister et de les ins
 Par défaut, les sauvegardes sont stockées dans `/home/yunohost.backup/archives/`.
 
   </TabItem>
-  <TabItem value="sftp" label="With a SFTP client">
+  <TabItem value="cli" label="From the command line">
 
 Les commandes `yunohost backup list` et `yunohost backup info <nom_d'archive>` permettent d'obtenir des infiormations sur les noms et tailles des sauvegardes.
 
