--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/20.backups/15.clone_filesystem.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/20.backups/15.clone_filesystem.mdx
@@ -161,7 +161,7 @@ Questo metodo comporta lo spegnimento del server per il tempo necessario alla cr
 
 <Tabs>
 <TabItem value="usbimage" label="With USBimager">
-Questo può essere fatto con il programma [USBimager](https://bztsrc.gitlab.io/usbimager/)  <https://bztsrc.gitlab.io/usbimager/> (N.B.: assicuratevi di scaricare la versione  'Read-write'! Non la versione 'Write-only'!). Il processo poi prosegue "all'opposto" della copia sulla scheda SD:
+Questo può essere fatto con il programma [USBimager](https://bztsrc.gitlab.io/usbimager/) (N.B.: assicuratevi di scaricare la versione  'Read-write'! Non la versione 'Write-only'!). Il processo poi prosegue "all'opposto" della copia sulla scheda SD:
 
 - Spegnete il vostro server
 - Estraete la scheda SD e inseritela nel pc
