--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/20.avoid_hardware_failure.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/20.avoid_hardware_failure.md
@@ -44,7 +44,7 @@ Toutefois, ces techniques de grappes de disques ne devraient pas être considér
 Quelques exemples de situations connues des administrateurs systèmes professionnels:
 
 - les disques d'une grappe montée avec des disques de la même marque peuvent tomber en panne quasiment en même temps en moins de quelques heures
-- sans monitoring de la santé des disques, il y a de fortes chances que l'on ne remarque la panne d'un disque de la grappe que lorsqu'un deuxième tombe en panne (><)
+- sans monitoring de la santé des disques, il y a de fortes chances que l'on ne remarque la panne d'un disque de la grappe que lorsqu'un deuxième tombe en panne (\>\<)
 - si on n'a pas de disque de rechange, le délai d'achat peut aboutir à un crash de l'autre disque
 - un disque à moitié fonctionnel qui produit des erreurs peut propager son erreur à travers la grappe
 - les connectiques des disques ou le contrôleur RAID peuvent produire des erreurs aussi ou tomber en panne
