reuse translations: finish backup + misc

--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/30.custom_backup_methods.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/30.custom_backup_methods.md
@@ -1,16 +1,16 @@
 ---
-title: Custom backup methods
+title: Méthodes personnalisées de sauvegardes
 ---
 
-It is possible to create your own backup method and link it to YunoHost's backup file collection system. This can be useful if you want to use your own backup software or conduct disk mount/dismount operations for example.
+Il est possible de créer votre propre méthode de sauvegarde et de la lier au système de collecte de fichiers à sauvegarder de YunoHost. Ceci peut être utile si vous souhaitez utiliser votre propre logiciel de sauvegarde ou mener des opérations de montages démontages de disques par exemple.
 
-This operation is done with a hook and will allow you to launch a backup this way:
+Cette opération se fait à l'aide d'un hook et vous permettra de lancer une sauvegarde de cette façon:
 
 ```bash
 yunohost backup create --method custom
 ```
 
-Below is a simplistic example that can be used to set up a rotational backup with different disks that are changed every week:
+Ci-dessous, un exemple simpliste qui peut permettre de mettre en place un backup rotationnel avec différents disques que l'on change toutes les semaines:
 
 `/etc/yunohost/hooks.d/backup_method/05-custom`
 
