--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/10.theming.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/10.theming.md
@@ -1,6 +1,6 @@
 ---
-sidebar_label: Theme the portal
-title: Customize the appearance of the user portal
+sidebar_label: Apparence du portail utilisateur
+title: Personnaliser l'apparence du portail utilisateur
 ---
 
 ## Globally disable the overlay
@@ -11,73 +11,73 @@ You can disable the overlay by changing the dedicated settings:
 yunohost settings set ssowat.panel_overlay.enabled -v 0
 ```
 
-## Using a theme
+## Utiliser un thème
 
-You can change the theme of the user portal in the admin panel, under Tools > YunoHost settings > Other > User portal.
+Vous pouvez changer le thème du portail utilisateur depuis l'interface administrateur, dans l'onglet Outils > Paramètres de YunoHost > Other > Thème du portail.
 
-You can list the available themes with:
+Vous pouvez lister les thèmes disponibles avec :
 
 ```bash
 ls /usr/share/ssowat/portal/assets/themes/
 ```
 
-Then you can use `nano /etc/ssowat/conf.json.persistent` to enable the theme you choose like this:
+Ensuite, vous pouvez utiliser `nano /etc/ssowat/conf.json.persistent` pour activer le thème que vous choisissez comme ceci :
 
 ```json
 {
-    "theme": "light",
-    ...other lines...
+    "theme" : "light",
+    ...autres lignes.....
 }
 ```
 
 :::tip
-You might need to force the refresh of your browser's cache for the theme to fully propagate. You can do so with Ctrl+Shift+R on Firefox.
+Vous devrez peut-être forcer le rafraîchissement du cache de votre navigateur pour que le thème se propage complètement. Vous pouvez le faire avec Ctrl+Maj+R sur Firefox.
 :::
 
-## Adding someone else's theme
+## Ajouter le thème de quelqu'un d'autre
 
-You may add themes created by other people by downloading and extracting the corresponding files in a new folder `the_theme_name` in `/usr/share/ssowat/portal/assets/themes/`.
+Vous pouvez ajouter des thèmes créés par d'autres personnes en téléchargeant et en extrayant les fichiers correspondants dans un nouveau dossier `nom_du_theme` dans `/usr/share/ssowat/portal/assets/themes/`.
 
 :::warning
-Beware that adding third-party themes from random strangers on the internet **is a security risk**. It is equivalent to running someone's else code on your machine, which can be used for malicious purpose such as stealing credentials!
+L'ajout de thèmes provenant d'inconnus sur Internet **est un risque de sécurité**. Cela équivaut à exécuter du code écrit par quelqu'un d'autre sur votre machine, et peut donc être utilisé à des fins malveillantes comme voler des mots de passe !
 :::
 
-There are a handful of themes listed [on GitHub](https://github.com/yunohost-themes).
+Quelques thèmes sont listés sur [GitHub](https://github.com/yunohost-themes).
 
-## Creating your own theme
+## Créer votre propre thème
 
-You can create your own theme by copying the existing theme of your choice. For instance starting from the light theme:
+Vous pouvez créer votre propre thème en copiant le thème existant de votre choix. Par exemple à partir du thème `light` :
 
 ```bash
-cp -r /usr/share/ssowat/portal/assets/themes/{light,your_own_theme}
+cp -r /usr/share/ssowat/portal/assets/themes/{light,votre_theme}
 ```
 
-Then, edit the files the CSS and JS files in `/usr/share/ssowat/portal/assets/themes/your_own_theme` according to what you want to do:
+Ensuite, éditez les fichiers CSS et JS dans `/usr/share/ssowat/portal/assets/themes/votre_theme` selon ce que vous voulez faire :
 
-- `custom_portal.css` can be used to add custom CSS rules to the user portal;
-- `custom_overlay.css` can be used to customize the small YunoHost button overlay, displayed on apps page which includes it;
-- `custom_portal.js` can be used to add custom JS code to be ran both on the user portal or when injecting the small YunoHost button / overlay.
+- `custom_portal.css` peut être utilisé pour ajouter des règles CSS personnalisées au portail utilisateur ;
+- `custom_overlay.css` peut être utilisé pour personnaliser le petit bouton YunoHost, présent sur les apps qui l'intègrent ;
+- `custom_portal.js` peut être utilisé pour ajouter du code JS personnalisé à exécuter à la fois sur le portail utilisateur ou lors de l'injection du petit bouton YunoHost ("overlay").
 
-You can also add your own images and assets which can then be used by the CSS and JS files.
+Vous pouvez également ajouter vos propres images et ressources qui peuvent ensuite être utilisées par les fichiers CSS et JS.
 
 :::tip
-[Share your custom theme with the community!](https://github.com/yunohost-themes)
+Partagez vos thèmes personnalisés avec la communauté ! <https://github.com/yunohost-themes>
 :::
 
-### Example : customizing the logo
+### Exemple : personnaliser le logo
 
-You may create your own theme simply to change the "branding" of the YunoHost user portal and replace the YunoHost logo with you own!
+Vous pouvez créer votre propre thème simplement pour changer le "branding" du portail utilisateur YunoHost et remplacer le logo YunoHost par votre propre logo !
 
-To do so, upload your logo to `/usr/share/ssowat/portal/assets/themes/your_own_theme/`, and use the following CSS rules:
+Pour ce faire, téléversez votre logo dans `/usr/share/ssowat/portal/assets/themes/votre_theme/`, et ajoutez les règles CSS suivantes :
 
 ```css
-/* Inside custom_portal.css */
+/* Dans custom_portal.css */
 #ynh-logo {
-  background-image: url("./your_logo.png");
+  background-image : url("./votre_logo.png");
 }
 
-/* Inside custom_overlay.css */
+/* Dans custom_overlay.css */
 #ynh-overlay-switch {
-  background-image: url("./your_logo.png");
+  background-image : url("./votre_logo.png");
 }
 ```
