--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/20.backups/25.include_exclude_files.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/20.backups/25.include_exclude_files.md
@@ -1,14 +1,14 @@
 ---
-title: Include or exclude files
+title: Includere o escludere files
 ---
 
-## Include files
+## Includere file
 
-YunoHost usually already knows what needs to be backed up. However, if you have made manual changes, such as installing an app outside of the YunoHost application system, you may want to extend YunoHost's mechanism to specify other files to be backed up.
+Nella maggior parte dei casi YunoHost conosce quali file devono fare parte del backup. Tuttavia se avete effettuato delle modifiche, ad esempio installando un programma senza avvalervi della procedura ufficiale di YunoHost, dovrete includere altri file da salvare nel vostro schema di backup.
 
-By default, if configurations tracked by YunoHost are changed, they will be backed up. On the other hand, a database or an app added by hand, changes on some configurations not tracked, will not be backed up.
+YunoHost tiene traccia delle modifiche effettuate utilizzando gli strumenti di default. Al contrario un programma o un database aggiunti manualmente e/o delle modifiche a file di configurazione, non saranno inseriti nel backup.
 
-You can create a backup hook and a restore hook to add data to backup. Here is an example:
+Potete creare un hook di backup e un hook di ripristino per aggiungere i file da salvare. Esempio:
 
 `/etc/yunohost/hooks.d/backup/99-conf_custom`
 
@@ -68,7 +68,7 @@ ynh_restore_dest (){
 ynh_abort_if_errors
 
 # Openvpn
-app="custom_openvpn" # This variable is important for the following helper
+app="custom_openvpn" # Cette variable est importante pour le helper suivant
 ynh_install_app_dependencies "openvpn openvpn-auth-ldap samba"
 
 ynh_restore_dest "conf/custom/openvpn"
@@ -78,7 +78,7 @@ ynh_restore_file "/etc/fail2ban/jail.d/openvpn.conf"
 ynh_restore_file "/etc/fail2ban/filter.d/openvpn.conf"
 
 # Samba
-app="custom_samba" # This variable is important for the following helper
+app="custom_samba" # Cette variable est importante pour le helper suivant
 ynh_install_app_dependencies "samba"
 
 ynh_restore_dest "conf/custom/samba"
@@ -98,30 +98,30 @@ ynh_restore_file "/etc/yunohost/hooks.d/backup/99-conf_custom"
 ynh_restore_file "/etc/yunohost/hooks.d/restore/99-conf_custom"
 ```
 
-## Exclude files
+## Escludere file
 
-There is no mechanism to exclude specific files from a YunoHost backup, other than the 2 options presented below:
+Esistono solo due metodi per escludere file dal backup di YunoHost:
 
-### Avoid backing up certain `/home` folders
+### Escludere alcune cartelle presenti in `/home`
 
-If needed, you can specify that certain user `home` folders not be backed up by the `yunohost backup` command, by creating an empty file named `.nobackup` inside.
+Se necessario potete specificare quali cartelle nella `home` di un utente non siano da includere nel comando `yunohost backup`, creando al loro interno un file vuoto con l'estensione `.nobackup`.
 
-Caution: this setup only works with **first-level subfolders of `/home`**, such as `/home/user1` or `/home/yunohost.multimedia`. It does not work for other levels of subfolders, like `/home/user1/bigfolder/`.
+Attenzione: questo metodo funziona solo con la **prima sottodirectory di `/home`** ad esempio `/home/user1` o `/home/yunohost.multimedia`. Al contrario non funzionerà per altre sottodirectory come `/home/user1/miacartella`.
 
-### Do not backup large amounts of data
+### Escludere grandi quantità di dati
 
-Some apps like Nextcloud are potentially attached to large amounts of data. It is possible to not backup them by default. In this case, the app is said to "backup only the core" (of the app).  
-During an update, apps containing a large amount of data usually make a backup without these data.
+Alcuni programmi come Nextcloud sono potenzialmente accompagnati da grandi quantità di dati. In questi casi viene fatto il backup solo del programma stesso (il "core").  
+Generalmente negli aggiornamenti dei programmi che contengono grandi quantità di dati, questi vengono esclusi dal backup.
 
-To temporarily disable backup of large data, for applications that implement this feature, you can set the `BACKUP_CORE_ONLY` variable. To do this, the variable must be set before the backup command:
+Per disattivare temporaneamente, nei programmi che supportano tale procedura, il backup di file di grandi dimensioni potete definire la variabile `BACKUP_CORE_ONLY`. La variabile deve essere definita prima di eseguire il comando di backup:
 
 ```bash
 BACKUP_CORE_ONLY=1 yunohost backup create --apps nextcloud
 ```
 
-Be careful: you will have to backup Nextcloud users' data yourself.
+Attenzione: dovrete procedere fare  backup dei dati degli utenti Nextcloud separatamente.
 
-If you want this behavior to be permanent:
+Se volete rendere permanente l'impostazione:
 
 ```bash
 yunohost app setting nextcloud do_not_backup_data -v 1
