--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/20.backups/30.custom_backup_methods.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/20.backups/30.custom_backup_methods.md
@@ -1,16 +1,16 @@
 ---
-title: Custom backup methods
+title: Metodi di backup personalizzati
 ---
 
-It is possible to create your own backup method and link it to YunoHost's backup file collection system. This can be useful if you want to use your own backup software or conduct disk mount/dismount operations for example.
+È possibile creare un proprio metodo di backup e includerlo nel sistema di raccolta file di backup di YunoHost. Questo può essere utilizzato ad esempio, nel caso utilizziate un particolare programma di backup o vogliate effettuare delle operazioni di montaggio o smontaggio sui vostri HD.
 
-This operation is done with a hook and will allow you to launch a backup this way:
+Dovrete creare un hook che lancerà il backup utilizzando il metodo personalizzato con questo comando:
 
 ```bash
 yunohost backup create --method custom
 ```
 
-Below is a simplistic example that can be used to set up a rotational backup with different disks that are changed every week:
+Di seguito un esempio, semplificato, che esegue il backup con rotazione dei dischi, che vengono sostituiti ogni settimana.
 
 `/etc/yunohost/hooks.d/backup_method/05-custom`
 
