--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/25.include_exclude_files.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/25.include_exclude_files.md
@@ -1,14 +1,14 @@
 ---
-title: Include or exclude files
+title: Inclure/exclure des fichiers
 ---
 
-## Include files
+## Inclure des fichiers
 
-YunoHost usually already knows what needs to be backed up. However, if you have made manual changes, such as installing an app outside of the YunoHost application system, you may want to extend YunoHost's mechanism to specify other files to be backed up.
+YunoHost sait en général déjà ce qui doit être sauvegardé. Toutefois, si vous avez procédé à des modifications manuelles, par exemple en installant une app en dehors du système d'applications de YunoHost, vous pouvez avoir envie d'étendre le mécanisme de YunoHost pour spécifier d'autres fichiers à sauvegarder.
 
-By default, if configurations tracked by YunoHost are changed, they will be backed up. On the other hand, a database or an app added by hand, changes on some configurations not tracked, will not be backed up.
+Par défaut, si des configurations suivies par YunoHost sont modifiées, elles seront sauvegardées. En revanche, une base de données ou une app ajoutée à la main, des modifs sur certaines configurations non suivies, ne le seront pas.
 
-You can create a backup hook and a restore hook to add data to backup. Here is an example:
+Vous pouvez créer un hook de sauvegarde et un hook de restauration pour ajouter des données à sauvegarder. Ci-dessous un exemple:
 
 `/etc/yunohost/hooks.d/backup/99-conf_custom`
 
@@ -68,7 +68,7 @@ ynh_restore_dest (){
 ynh_abort_if_errors
 
 # Openvpn
-app="custom_openvpn" # This variable is important for the following helper
+app="custom_openvpn" # Cette variable est importante pour le helper suivant
 ynh_install_app_dependencies "openvpn openvpn-auth-ldap samba"
 
 ynh_restore_dest "conf/custom/openvpn"
@@ -78,7 +78,7 @@ ynh_restore_file "/etc/fail2ban/jail.d/openvpn.conf"
 ynh_restore_file "/etc/fail2ban/filter.d/openvpn.conf"
 
 # Samba
-app="custom_samba" # This variable is important for the following helper
+app="custom_samba" # Cette variable est importante pour le helper suivant
 ynh_install_app_dependencies "samba"
 
 ynh_restore_dest "conf/custom/samba"
@@ -98,30 +98,30 @@ ynh_restore_file "/etc/yunohost/hooks.d/backup/99-conf_custom"
 ynh_restore_file "/etc/yunohost/hooks.d/restore/99-conf_custom"
 ```
 
-## Exclude files
+## Exclure des fichiers
 
-There is no mechanism to exclude specific files from a YunoHost backup, other than the 2 options presented below:
+Il n'existe pas de mécanisme pour exclure d'une sauvegarde au format YunoHost des fichiers spécifiques, en dehors des 2 options présentées ci-dessous:
 
-### Avoid backing up certain `/home` folders
+### Éviter de sauvegarder certains dossiers du `/home`
 
-If needed, you can specify that certain user `home` folders not be backed up by the `yunohost backup` command, by creating an empty file named `.nobackup` inside.
+Si besoin, vous pouvez spécifier que certains dossiers `home` d'utilisateurs ou utilisatrices ne soient pas sauvegardés par la commande `yunohost backup`, en créant un fichier vide nommé `.nobackup` à l'intérieur.
 
-Caution: this setup only works with **first-level subfolders of `/home`**, such as `/home/user1` or `/home/yunohost.multimedia`. It does not work for other levels of subfolders, like `/home/user1/bigfolder/`.
+Attention ce mécanisme ne fonctionne que pour les **sous-dossiers de premier niveau** du `/home`, comme par exemple `/home/user1` ou `/home/yunohost.multimedia` . Cela ne fonctionne pas pour les autres dossiers ou sous-dossiers, comme par exemple `/home/user1/grosdossier`.
 
-### Do not backup large amounts of data
+### Ne pas sauvegarder les grosses quantités de données
 
-Some apps like Nextcloud are potentially attached to large amounts of data. It is possible to not backup them by default. In this case, the app is said to "backup only the core" (of the app).  
-During an update, apps containing a large amount of data usually make a backup without these data.
+Certaines apps comme Nextcloud sont potentiellement rattachées à des quantités importantes de données. Il est possible de ne pas les sauvegarder par défaut. Dans ce cas, on dit que l'app "sauvegarde uniquement le core" (de l'app).  
+Lors d'une mise à jour, les apps contenant une grande quantité de données effectuent généralement une sauvegarde sans ces données.
 
-To temporarily disable backup of large data, for applications that implement this feature, you can set the `BACKUP_CORE_ONLY` variable. To do this, the variable must be set before the backup command:
+Pour désactiver temporairement la sauvegarde des données volumineuses, pour les applications qui implémentent cette fonctionnalité, vous pouvez définir la variable `BACKUP_CORE_ONLY`. Pour ce faire, la variable doit être définie avant la commande de backup :
 
 ```bash
 BACKUP_CORE_ONLY=1 yunohost backup create --apps nextcloud
 ```
 
-Be careful: you will have to backup Nextcloud users' data yourself.
+Faites montre de prudence : il vous faudra alors sauvegarder vous-même les données des utilisateurs et utilisatrices de Nextcloud.
 
-If you want this behavior to be permanent:
+Si vous souhaitez que ce comportement soit permanent:
 
 ```bash
 yunohost app setting nextcloud do_not_backup_data -v 1
