--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/10.theming.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/10.theming.md
@@ -61,7 +61,7 @@ Ensuite, éditez les fichiers CSS et JS dans `/usr/share/ssowat/portal/assets/th
 Vous pouvez également ajouter vos propres images et ressources qui peuvent ensuite être utilisées par les fichiers CSS et JS.
 
 :::tip
-Partagez vos thèmes personnalisés avec la communauté ! <https://github.com/yunohost-themes>
+[Partagez vos thèmes personnalisés avec la communauté !](https://github.com/yunohost-themes)
 :::
 
 ### Exemple : personnaliser le logo
